--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header class="page-header">
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
         <nav>
         <ul class="site-nav list">
           <li class="site-item"><a href="./index.html" class="site-link link">Студия</a></li>
@@ -135,20 +135,20 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="" class="logo"><span>Web</span>Studio</a>
-      <address>
+    <footer class="footer">
+      <a href="" class="footer-logo"><span class="logo-span">Web</span>Studio</a>
+      <address class="address">
         <ul class="footer-list list">
-          <li class="footer-map">
+          <li class="footer-address">
             <a
               href="https://goo.gl/maps/VZwjdvLgzHwuLjkQ9"
               target="_blank"
               rel="noopener"
-              >г. Киев, пр-т Леси Украинки, 26</a
+              class="footer-map">г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li class="footer-item"><a href="mailto:info@example.com" class="footer-link link">info@example.com</a></li>
-          <li class="footer-item"><a href="tel:+380991111111" class="footer-link link">+38 099 111 11 11</a></li>
+          <li class="footer-item"><a href="mailto:info@example.com" class="footer-link">info@example.com</a></li>
+          <li class="footer-item"><a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
