--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
               alt="Ресторан Seafood"
               width: 370px;
             />
-            <h2 class="proect-title">Ресторан Seafood</h2>
+            <h2 class="proect-title">Ресторан <span lang="en">Seafood</span></h2>
             <p class="proect-text">Приложение</p>
           </li>
 
@@ -88,14 +88,14 @@
             <a href=""></a>
             <img src="./images.portfolio/Проект Prime.jpg" alt="Проект Prime"
             width: 370px; />
-            <h2 class="proect-title">Проект Prime</h2>
+            <h2 class="proect-title">Проект <span lang="en">Prime</span></h2>
             <p class="proect-text">Маркетинг</p>
           </li>
 
           <li class="proect-item"class="proect-item">
             <a href=""></a>
             <img src="./images.portfolio/Проект Boxes.jpg" alt="Проект Boxes" width: 370px; />
-            <h2 class="proect-title">Проект Boxes</h2>
+            <h2 class="proect-title">Проект <span lang="en">Boxes</span></h2>
             <p class="proect-text">Приложение</p>
           </li>
 
@@ -106,7 +106,7 @@
               alt="Inspiration has no Borders"
               width: 370px;
             />
-            <h2 class="proect-title">Inspiration has no Borders</h2>
+            <h2 class="proect-title"><span lang="en">Inspiration has no Borders</span></h2>
             <p class="proect-text">Веб-сайт</p>
           </li>
 
@@ -117,7 +117,7 @@
               alt="Издание Limited Edition"
               width: 370px;
             />
-            <h2 class="proect-title">Издание Limited Edition</h2>
+            <h2 class="proect-title">Издание <span lang="en">Limited Edition</span></h2>
             <p class="proect-text">Дизайн</p>
           </li>
 
@@ -125,7 +125,7 @@
             <a href=""></a>
             <img src="./images.portfolio/Проект LAB.jpg" alt="Проект LAB"
             width: 370px; />
-            <h2 class="proect-title">Проект LAB</h2>
+            <h2 class="proect-title">Проект <spam lang="en">LAB</spam></h2>
             <p class="proect-text">Маркетинг</p>
           </li>
 
@@ -136,26 +136,26 @@
               alt="Growing Business"
               width: 370px;
             />
-            <h2 class="proect-title">Growing Business</h2>
+            <h2 class="proect-title"><span lang="en">Growing Business</span></h2>
             <p class="proect-text">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="" class="logo"><span>Web</span>Studio</a>
-      <address>
+    <footer class="footer">
+      <a href="" class="footer-logo"><span class="logo-span">Web</span>Studio</a>
+      <address class="address">
         <ul class="footer-list list">
-          <li class="footer-map">
+          <li class="footer-address">
             <a
               href="https://goo.gl/maps/VZwjdvLgzHwuLjkQ9"
               target="_blank"
               rel="noopener"
-              >г. Киев, пр-т Леси Украинки, 26</a
+              class="footer-map">г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li class="footer-item"><a href="mailto:info@example.com" class="footer-link link">info@example.com</a></li>
-          <li class="footer-item"><a href="tel:+380991111111" class="footer-link link">+38 099 111 11 11</a></li>
+          <li class="footer-item"><a href="mailto:info@example.com" class="footer-link">info@example.com</a></li>
+          <li class="footer-item"><a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
