--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
         <nav>
         <ul class="site-nav list">
-          <li class="site-item"><a href="./index.html" class="site-link link">Студия</a></li>
-          <li class="site-item"><a href="./portfolio.html" class="site-link link">Портфолио</a></li>
+          <li class="site-item"><a href="./index.html" class="site-link link current">Студия</a></li>
+          <li class="site-item"><a href="./portfolio.html" class="site-link link current">Портфолио</a></li>
           <li class="site-item"><a href="" class="site-link link">Контакты</a></li>
         </ul>
       </nav>
