--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
       <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
       <nav>
         <ul class="site-nav list">
-          <li class="site-item"><a href="./index.html" class="site-link link">Студия</a></li>
-          <li class="site-item"><a href="./portfolio.html" class="site-link link">Портфолио</a></li>
+          <li class="site-item"><a href="./index.html" class="site-link link current">Студия</a></li>
+          <li class="site-item"><a href="./portfolio.html" class="site-link link current">Портфолио</a></li>
           <li class="site-item"><a href="" class="site-link link">Контакты</a></li>
         </ul>
       </nav>
@@ -32,7 +32,6 @@
     <main>
       <section class="filter">
         <h1>Наши проекти</h1>
-        <nav>
           <ul class="filter-list list">
             <li>
               <button type="button" class="filter-btn">Все</button>
@@ -51,93 +50,75 @@
               <button type="button"class="filter-btn">Маркетинг</button>
             </li>
           </ul>
-        </nav>
 
         <ul class="proect-list list">
           <li class="proect-item">
-            <a href=""></a>
-            <img src="./images.portfolio/Технокряк.jpg" alt="Технокряк"
+            <a href=""><img src="./images.portfolio/Технокряк.jpg" alt="Технокряк"
             width: 370px; />
             <h2 class="proect-title">Технокряк</h2>
-            <p class="proect-text">Веб-сайт</p>
+            <p class="proect-text">Веб-сайт</p></a>
           </li>
-          
           <li class="proect-item">
-            <a href=""></a>
-            <img
+            <a href=""><img
               src="./images.portfolio/Постер New Orlean vs Golden Star.jpg"
               alt="Постер New Orlean vs Golden Star"
               width: 370px;
             />
             <h2 class="proect-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p class="proect-text">Дизайн</p>
+            <p class="proect-text">Дизайн</p></a>
           </li>
-
           <li class="proect-item">
-            <a href=""></a>
-            <img
+            <a href=""><img
               src="./images.portfolio/Ресторан Seafood.jpg"
               alt="Ресторан Seafood"
               width: 370px;
             />
             <h2 class="proect-title">Ресторан <span lang="en">Seafood</span></h2>
-            <p class="proect-text">Приложение</p>
+            <p class="proect-text">Приложение</p></a>
           </li>
-
           <li class="proect-item">
-            <a href=""></a>
-            <img src="./images.portfolio/Проект Prime.jpg" alt="Проект Prime"
+            <a href=""><img src="./images.portfolio/Проект Prime.jpg" alt="Проект Prime"
             width: 370px; />
             <h2 class="proect-title">Проект <span lang="en">Prime</span></h2>
-            <p class="proect-text">Маркетинг</p>
+            <p class="proect-text">Маркетинг</p></a>
           </li>
-
           <li class="proect-item"class="proect-item">
-            <a href=""></a>
-            <img src="./images.portfolio/Проект Boxes.jpg" alt="Проект Boxes" width: 370px; />
+            <a href=""><img src="./images.portfolio/Проект Boxes.jpg" alt="Проект Boxes" width: 370px; />
             <h2 class="proect-title">Проект <span lang="en">Boxes</span></h2>
-            <p class="proect-text">Приложение</p>
+            <p class="proect-text">Приложение</p></a>
           </li>
-
           <li class="proect-item">
-            <a href=""></a>
-            <img
+            <a href=""> <img
               src="./images.portfolio/Inspiration has no Borders.jpg"
               alt="Inspiration has no Borders"
               width: 370px;
             />
             <h2 class="proect-title"><span lang="en">Inspiration has no Borders</span></h2>
-            <p class="proect-text">Веб-сайт</p>
+            <p class="proect-text">Веб-сайт</p></a>
           </li>
-
           <li class="proect-item">
-            <a href=""></a>
-            <img
+            <a href=""><img
               src="./images.portfolio/Издание Limited Edition.jpg"
               alt="Издание Limited Edition"
               width: 370px;
             />
             <h2 class="proect-title">Издание <span lang="en">Limited Edition</span></h2>
-            <p class="proect-text">Дизайн</p>
+            <p class="proect-text">Дизайн</p></a>
           </li>
-
           <li class="proect-item">
-            <a href=""></a>
-            <img src="./images.portfolio/Проект LAB.jpg" alt="Проект LAB"
+            <a href=""><img src="./images.portfolio/Проект LAB.jpg" alt="Проект LAB"
             width: 370px; />
             <h2 class="proect-title">Проект <spam lang="en">LAB</spam></h2>
-            <p class="proect-text">Маркетинг</p>
+            <p class="proect-text">Маркетинг</p></a>
           </li>
-
           <li class="proect-item">
-            <a href=""></a>
-            <img
+            <a href=""> <img
               src="./images.portfolio/Growing Business.jpg"
               alt="Growing Business"
               width: 370px;
             />
             <h2 class="proect-title"><span lang="en">Growing Business</span></h2>
-            <p class="proect-text">Приложение</p>
+            <p class="proect-text">Приложение</p></a>
           </li>
         </ul>
       </section>
